# cyclone-cli

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
src/: config.rs  main.rs  smart_select.rs  util.rs
src/commands/: download.rs  mod.rs
